ros2_ws/log/build_2024-08-12_12-48-34/serial_communicator/stderr.log
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:9:53: error: member initializer 'keep_running_' does not name a non-static data member or base class
        : io_service_(), serial_port_(io_service_), keep_running_(true) {
                                                    ^~~~~~~~~~~~~~~~~~~
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:39:78: warning: unused parameter 'length' [-Wunused-parameter]
            [this, data](const boost::system::error_code& error, std::size_t length) {
                                                                             ^
/Users/fergusproctor/dev/SLAM-robot/ros2_ws/src/serial_communicator/src/simple_serial.cpp:39:14: warning: lambda capture 'this' is not used [-Wunused-lambda-capture]
            [this, data](const boost::system::error_code& error, std::size_t length) {
             ^~~~~
2 warnings and 1 error generated.
make[2]: *** [CMakeFiles/simple_serial.dir/build.make:76: CMakeFiles/simple_serial.dir/src/simple_serial.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/simple_serial.dir/all] Error 2
make: *** [Makefile:146: all] Error 2
